k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo-ingress
  namespace: devsu-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devsu-demo.solvextk.com
    secretName: devsu-demo-tls
  rules:
  - host: devsu-demo.solvextk.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsu-demo-service
            port:
              number: 80
